--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="meta">Date: 14/03/21</div>
     <h3>Christening</h3>
 <pre>
-I Went to a Baptism yesterday; I hadn’t been to one in about 5 years
+I Went to a Baptism yesterday; I hadn’t been to one in about 5 years.
 </pre>
   <a href="./blog-posts/christening--070321.html">read more..</a>
   </div>
