--- a/blog-posts/officespace--280321.html
+++ b/blog-posts/officespace--280321.html
@@ -25,11 +25,11 @@
 I re-watched office space last night. The last time I saw it was probably 10 years ago and back then I didn't have much office experience. It's much funnier to me now. The charm of office space is that despite it being about the monotony and perceived pointlessness (not to mention oddness) of spending a significant part of your life in a cubicle, at the end of the day it's an inspirational movie. The main character essentially refuses to play ball and ends up breaking free. 
 
 
-A lot of movies from the 90s (American beauty, Fight Club, The Matrix) share the theme of "breaking away from the mundane". I watched a youtube video that suggested that the reason for this is that for America, the 90s was an odd period where it had no enemies (The Soviet Union was gone and 9/11 hadn't happened yet) and everything was going gangbusters with the economy.  These movies tapped into a sense of boredom and lack of adventure. I think there is some truth to this.
+A lot of movies from the 90s (American beauty, Fight Club, The Matrix) share the theme of "breaking away from the mundane". I watched a youtube <a href="https://www.youtube.com/watch?v=RuZKG77vANU" target="_blank">video</a> that suggested that the reason for this is that for America, the 90s was an odd period where it had no enemies (The Soviet Union was gone and 9/11 hadn't happened yet) and everything was going gangbusters with the economy.  These movies tapped into a sense of boredom and lack of adventure. I think there is some truth to this.
 
-There is obviously a white middle class bias to this analysis, and actually the fault with all these movies, including office space, is their indulgence and sense of entitlement. Regardless they speak to a lot of people, including me, who can relate to them, although I am grateful for what I have (things can be a lot worse).
+There is obviously a white middle class bias to this analysis and actually the fault with all these movies, including office space, is their indulgence and sense of entitlement. Regardless a lot of people relate to them, including me, although I am grateful for what I have (things can be a lot worse).
 
-I think I might watch American Beaty soon. I don’t think I’ve seen it in full before. The '90s for me is startng to reach a point where it's "another era", closer in cultural significance to the '60s then the 80s or '00s.
+I think I might watch American Beaty soon. I don’t think I’ve seen it in full before. The '90s for me is starting to reach a point where it's "another era", one distant from ours, closer in cultural significance to the '60s then the 80s or '00s.
 </pre>
     </div>
   </div>
