--- a/blog-posts/forget-it-jake-its-chinatown--180421.html
+++ b/blog-posts/forget-it-jake-its-chinatown--180421.html
@@ -28,13 +28,13 @@ Chinatown is a mystery film in which the revelations don't really matter. In the
 
 The main antagonist of the film (the man who owned the water supply) also raped his daughter and impregnated her, another unnatural act that subverts the natural creation of life. He is no longer interested in money, his only goal is power which buys him "The future, Mr. Gittes - the future". He has no shame about his actions, and regards his second daughter as a distillation of his power and a symbol of the future. He is desperate to find her.  
 
-The title "Chinatown" is odd for a movie that isn't set in a Chinatown or about Chinese people. Jake (The main character) used to work in a Chinatown, and felt a sense of helplessness while working there and when he did try to help, he made things worse. Chinatown in the film represents futility and confusion. The final scene of the film is set in Chinatown and ends with tragic injustice and Jake uttering the defeatist mottle of Chinatown policemen: "as little as possible". The final words of the movie are "Forget it Jake, It's Chinatown"
+The title "Chinatown" is odd for a movie that isn't set in a Chinatown or about Chinese people. Jake (The main character) used to work in a Chinatown, and felt a sense of helplessness while working there and when he did try to help, he made things worse. Chinatown in the film represents futility and confusion. The final scene of the film is set in Chinatown and ends with tragic injustice and Jake uttering the defeatist motto of Chinatown policemen: "as little as possible". The final words of the movie are "Forget it Jake, It's Chinatown"
 
 I didn’t notice while watching, but on reflection, it is an extremely efficient movie. Every word and every scene is there for a purpose, there is no filler lines. Every gesture comes back to be revealed as having a purpose. It is often listed as one of the best screenplays ever written.
 
 I wonder when portrayals of LA as a hell-hole started in Hollywood? It seems to be a reoccurring theme in Cinema, a lot of dystopian Sci-Fi is set in Hollywood (Terminator, Blade Runner, Brazil, The Matrix, Gattaca). What is it about LA that makes people want to portray it that way? Maybe the reason is that it’s one of the two American cities everyone around the world knows (New York being the other).
 
-It's very hard to watch this movie and not think of Roman Polanski <a href="https://en.wikipedia.org/wiki/Roman_Polanski_sexual_abuse_case" target="_blank">crimes</a>. I think it might be a window into how the view the world.
+It's very hard to watch this movie and not think of Roman Polanski's <a href="https://en.wikipedia.org/wiki/Roman_Polanski_sexual_abuse_case" target="_blank">crimes</a>. I think it might be a window into how the view the world.
 </pre>
     </div>
   </div>
