--- a/blog-posts/forget-it-jake-its-chinatown--180421.html
+++ b/blog-posts/forget-it-jake-its-chinatown--180421.html
@@ -34,7 +34,7 @@ I didn’t notice while watching, but on reflection, it is an extremely efficien
 
 I wonder when portrayals of LA as a hell-hole started in Hollywood? It seems to be a reoccurring theme in Cinema, a lot of dystopian Sci-Fi is set in Hollywood (Terminator, Blade Runner, Brazil, The Matrix, Gattaca). What is it about LA that makes people want to portray it that way? Maybe the reason is that it’s one of the two American cities everyone around the world knows (New York being the other).
 
-It's very hard to watch this movie and not think of Roman Polanski's <a href="https://en.wikipedia.org/wiki/Roman_Polanski_sexual_abuse_case" target="_blank">crimes</a>. I think it might be a window into how the view the world.
+It's very hard to watch this movie and not think of Roman Polanski's <a href="https://en.wikipedia.org/wiki/Roman_Polanski_sexual_abuse_case" target="_blank">crimes</a>. I think it might be a window into how he views the world.
 </pre>
     </div>
   </div>
